fix bug 2.0